--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
 development:
-  password: 
-  theme_id: ""
-  store: your-shop.myshopify.com
+  password: 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
+  theme_id: "123421819031"
+  store: theme-dev-rlh.myshopify.com
